# gui-test

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  run instructions.txt
src/: globals.cpp  globals.h  main.cpp
src/data/: data_channel.cpp  data_channel.h  data_history.cpp  data_history.h  valve.cpp  valve.h
src/globals/: globals.cpp  globals.h
src/graphics/: backend.cpp  backend.h  renderer.cpp  renderer.h  window.cpp
src/graphics/data/: data_channel.cpp  data_channel.h  data_history.cpp  data_history.h
src/graphics/image/: image.cpp  image.h
src/graphics/window_types/: automation.cpp  communications.cpp  control.cpp  graph.cpp  image.cpp
src/image/: image.cpp
src/logger/: logger.cpp  logger.h
src/systems/: simulated_data.cpp  simulated_data.h
